app/(pages)/(home)/page.module.scss
@use "@/app/(pages)/_globals/mixins.scss";

.page{
    display: flex;
    flex-direction: column;
    justify-content: center;
    // width: calc(8px * 123);
    gap: 80px;
    margin: auto;
}


.header{
    display: flex;
    flex-direction: column;
    align-items: center;
}

.header h2{
    color: var(--emerald);
}

.header h4{
    color: var(--dark-grey);
}

.swiper{
    width: calc(8px * 123);
    display: flex;
    justify-content: center;
    align-items: center;
    margin: auto;
    overflow: visible !important;
}

.swiperslide{
    display: flex;
    justify-content: center;
    align-items: center;
    margin: auto;
}

.slide{
    display: flex;
    flex-direction: column;
    width: calc(8px * 65);
    height: calc(8px * 82);
    padding: 20px;
    border-radius: 20px;
    border: 2px solid var(--mint);
    background: #FFF;
    box-shadow: var(--drop-shadow-mint);
    transform: scale(1) translateX(0);
    transition: transform 0.5s ease-in-out, opacity 0.3s ease-in-out, z-index 0.3s ease-in-out;
    opacity: 1;
}

.active{
    opacity: 1;
}

.inactive{
    transform: scale(0.75);
    opacity: 0.7;
    filter: blur(4px);
}

.shown {
    
}

.unshown {
    display: none;
}

.image{
    width: 480px;
    height: 280px;
    border-radius: 10px;
}

.info {
    display: flex;
    flex-direction: column;
    align-items: center;      
    width: 100%;

    > h3{
        text-align: center;
        padding: 30px 60px 40px 60px;

    }
    > a{
        margin: 40px 60px 30px 60px;
    }
    > div{
        display: flex;
        gap: 12px;
        align-items: center;
        min-width: 100%;
        margin-bottom: 12px;
    }
}

.icon{
    display: flex;
    align-items: center; 
    justify-content: center;
    flex-shrink: 0;
}

.nav{
    display: flex;
    flex-direction: row;
    justify-content: center;
    gap: 20px;
}

.navbttn{
    border: none;
    width: 70px;
    height: 70px;
    border-radius: 50%;
    color: var(--teal);
}

.dots{
    display: flex;
    flex-direction: row;
    height: 36px;
    width: 280px;
    margin-top: auto;
    margin-bottom: auto;
    border: 1.5px solid #BDBDBD;
    border-radius: 25px;
}

.dot {
    cursor: pointer;
    width: 20px;
    height: 20px;
    aspect-ratio: 1;
    border-radius: 50%;
    background-color: #BDBDBD;
    margin: auto;
}

.dot.active {
    background-color: var(--teal);
}

